--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.gysoft</groupId>
     <artifactId>GY-Tracing</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <description>dubbo 跟踪服务</description>
     <packaging>jar</packaging>
 
     <properties>
